# buildAI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 001_add_scheduling_tables.py  002_add_employee_ranking.py
app/: auth.py  config.py  database.py  main.py
app/api/: auth_routes.py  building_research.py  deps.py  exceptions.py  ingest.py  jobs.py  mappings.py  schedule.py  seed.py  ui.py  wip.py
app/models/: __init__.py  cost_code.py  employee.py  exception.py  gl_transaction.py  job.py  job_billing.py  job_budget.py  job_daily_metric.py  job_labor_demand.py  job_mapping.py  labor_burden_rate.py  schedule_assignment.py  time_entry.py
app/schemas/: building_research.py  exception.py  ingest.py  job.py  mapping.py  schedule.py  wip.py
app/services/: building_research.py  cost_engine.py  ingest_adp.py  ingest_budgets.py  ingest_qbo.py  schedule_generator.py  schedule_import.py  wip_engine.py
docs/: DEPLOY.md  RAILWAY_SETUP.md
sample_data/: adp_time_export.csv  budgets.csv  qbo_transactions.csv
scripts/: seed_demo_data.py  start.py
sql/: views.sql
tests/: conftest.py  test_api.py  test_building_research.py  test_cost_engine.py  test_ingest.py  test_seed.py  test_wip_engine.py
